--- a/five00dp/res/layout/menu_list_item.xml
+++ b/five00dp/res/layout/menu_list_item.xml
@@ -9,9 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left|center_vertical"
-        android:text="Medium Text"
-        android:textColor="@android:color/white"
-        android:textAppearance="?android:attr/textAppearanceMedium" 
-        android:drawableLeft="@drawable/ic_profile"/>
+        android:textColor="#FFF4F4F4"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="16dp"
+        android:textSize="16sp"/>
 
 </LinearLayout>
